--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
+    "styled-components": "^5.3.3",
+    "axios": "^0.26.0",
+    "node-sass": "^6.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
